@startuml
interface INewsService  {
    +getFilteredNews(source: string, keywords: string, limit: int): vector<XMLItem>
}
class NewsController {
    +setupRoutes(server: httplib::Server, newsService: INewsService)
}
class RSSService {
    +getFilteredNews(source: string, keywords: string, limit: int): vector<XMLItem>
}

class RSSFetcher {
    +fetch(url: string): vector<XMLItem>
    +filterByKeywords(items: vector<XMLItem>, keywordList: vector<string>): vector<XMLItem>
}

class XMLItem {
    -title: string
    -link: string
    -category: string
    +getTitle(): string
    +getLink(): string
    +getCategory(): string
    +setTitle(title: string)
    +setLink(link: string)
    +setCategory(category: string)
    +toJson(): nlohmann::json
}

class ConfigLoader {
    +loadRSSConfig(configPath: string): unordered_map<string, string>
}

class CurlWrapper {
    +fetchData(url: string): string
}
NewsController o-- INewsService
NewsController o-- ConfigLoader
INewsService <|-- RSSService
RSSService o-- RSSFetcher
RSSFetcher o-- XMLItem
RSSFetcher o--CurlWrapper
@enduml
